--- a/src/Component/NavBar/NavBar.css
+++ b/src/Component/NavBar/NavBar.css
@@ -77,3 +77,13 @@
     margin-left: 10px;
 }
 
+.navbar__logoutbtn {
+    margin-top: 15px;
+    margin-left: 10px;
+    height: 30px;
+    width: 80px;
+    border: 1px solid #dbdbdb;
+    text-align: center;
+    border-radius: 5px;
+    font-size: 16px;
+}
